# scopemimicry

./: .gitignore  README.md  library.json
for_zephyr/: CMakeLists.txt  prj.conf
for_zephyr/src/: main.cpp
src/: Scope.cpp  Scope.h  ScopeMimicry.cpp  ScopeMimicry.h
tests/: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  pl_df.py  test_scope  test_scope.cpp
